--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -140,13 +140,20 @@ interface {{ port_channel_interface.name }}
 {%                     if gre_strip_config.source is arista.avd.defined %}
 {%                         set tap_encapsulation_cli = tap_encapsulation_cli ~ " source " ~ gre_strip_config.source %}
 {%                     endif %}
-{%                     if gre_strip_config.protocol is arista.avd.defined %}
-{%                         set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ gre_strip_config.protocol %}
-{%                     endif %}
-{%                 elif gre_strip_config.protocol is arista.avd.defined and gre_strip_config.destination is not arista.avd.defined %}
-{%                     set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ gre_strip_config.protocol %}
 {%                 endif %}
-   {{ tap_encapsulation_cli }} strip
+{%                 if gre_strip_config.protocol is arista.avd.defined %}
+{%                     set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ gre_strip_config.protocol %}
+{%                     if gre_strip_config.feature_header_length is arista.avd.defined %}
+{%                         set tap_encapsulation_cli = tap_encapsulation_cli ~ " feature header length " ~ gre_strip_config.feature_header_length %}
+{%                     endif %}
+{%                 endif %}
+{%                 set tap_encapsulation_cli = tap_encapsulation_cli ~ " strip" %}
+{%                 if gre_strip_config.protocol is arista.avd.defined and
+                     gre_strip_config.feature_header_length is arista.avd.defined and
+                     gre_strip_config.re_encapsulation_ethernet_header is arista.avd.defined(true) %}
+{%                     set tap_encapsulation_cli = tap_encapsulation_cli ~ " re-encapsulation ethernet" %}
+{%                 endif %}
+   {{ tap_encapsulation_cli }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
